# $Id$

AC_PREREQ(2.59)

AC_INIT([flex-bison-cpp-example], [0.1.4])
AC_CONFIG_SRCDIR([src/exprtest.cc])
AC_CONFIG_AUX_DIR([scripts])

AM_INIT_AUTOMAKE([1.11 subdir-objects])

# Checks for programs.
AC_PROG_CC
AC_PROG_CXX
AC_PROG_RANLIB
AC_PROG_LEX
AC_PROG_YACC

# Create the Makefile
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
